src/styles/Markdown.module.css
.wrapper {
  display: flex;
  align-items: flex-start;
  gap: clamp(32px, 10%, 128px);
  max-height: 100%;
  overflow-y: auto;
  padding: 8px 0 35% 10%;
}

.article {
  display: grid;
  width: 100%;
}

.article > *:is(h1, h2, h3, h4, h5, h6) {
  white-space: normal !important;
  padding: 0;
  display: flex;
  gap: 8px;
  position: relative;
  overflow-x: visible;
   margin: 16px 0 10px;
}

.article > img {
  max-height: 25vh;
  width: fit-content;
  height: fit-content;
}

.article > td {
    background: var(--fabric-background-tertiary);
   border: 1px solid black;

   width: fit-content;
   height: fit-content;

   border-collapse: collapse;
}
.quote {
  background: var(--fabric-background-secondary) !important;
  border-radius: 0 3px 3px 0;
  padding: 8px;
  margin: 4px auto;
  width: calc(100% - 16px);
  overflow-y: auto;
  border: var(--fabric-border-primary) 1px solid;
  border-left: #0095ff 3px solid;
  color: var(--fabric-color-primary);
 font-size: .8rem;
}

.quote[data-layer="true"] {
  border-color: var(--fabric-border-secondary);
  border-left-color: #0095ff;
}

.article > * {

  max-width: 100%;
  width: 100%;
  overflow-x: hidden;

  /* margin: 0; */
  white-space: pre-wrap;
}

.article > *[dir="auto"] {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  align-content: center;
  gap: 8px;
  justify-content: flex-start;
  white-space: pre-wrap;
}

.article > *[align="center"] {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  align-content: center;
  gap: 8px;
  justify-content: center;
  white-space: pre-wrap;
}

.divider {
  width: 100%;
  margin: 8px 0;
  border-bottom: var(--fabric-border-primary) 2px solid;
}

.list {
  width: 100%;
  font-size: 0.85rem;
  overflow: visible;
  color: var(--fabric-color-secondary);

}

.list > * {
   display: list-item;
   list-style-type: square;
   list-style-position: inside;
}

.paragraph {
  color: var(--fabric-color-tertiary);
  width: 100%;
  display: inline-block;
  max-width: 100%;
  white-space: pre-wrap;
  word-wrap: break-word;
  font-size: 0.9rem;
  margin: 0 !important;
  height: fit-content;
}

.image {
  width: fit-content;
  height: fit-content;
}

.tableWrapper {
  border-collapse: collapse;
  max-width: 100%;
   height: fit-content;
  overflow-x: hidden;
   width: fit-content;
}

.tableRow:nth-child(even) {
  color: var(--fabric-color-tertiary);
  background-color: var(--fabric-background-secondary);
}

.tableRow:nth-child(odd) {
  color: var(--fabric-color-secondary);

  /* background-color: var(--fabric-background-secondary); */
}

.tableContent {
   border: 1px solid var(--fabric-border-secondary);
   text-align: left;
   padding: 4px;
   height: fit-content;
   position: relative;
}


.header {
  height: fit-content;
  width: 100%;
  position: relative;
  color: var(--fabric-color-primary);
  overflow: visible;

}

.header:is(h1) {
  font-size: 1.2rem;
}

.header:is(h2) {
  font-size: 1.05rem;
}

.header:is(h3) {
  font-size: 0.95rem;
}

.header:is(h4) {
  font-size: 0.85rem;
}

.article > *:is(h1, h2){
   border-bottom: var(--fabric-border-primary) 2px solid;
}

.link {
  text-decoration: none;
  color: #0095ff;
  font-weight: bold;
}

.link:hover {
  text-decoration: underline;
}

/* CODE */
.inlineCode {
  padding: 0 5px;
  width: fit-content;
  position: relative;
  overflow: hidden;
  color: #f55;
  font-size: 0.85rem;
}

.inlineCode::after {
  content: "";
  position: absolute;
  background: #f55;
  opacity: 0.1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  border-radius: 5px;
}

.code {
  margin: 0;
  font-family: Consolas, serif;
  font-weight: normal;
  position: relative;
  font-size: .9rem;
  color: var(--fabric-color-secondary);
  border-radius: 5px;
  padding: 5px 0 5px 5px;
  white-space: pre-wrap;
  word-wrap: break-word;

  /* tab-size: 1rem; */

  overflow: auto;
  max-height: 35vh;
  background: var(--fabric-background-secondary);
  border: var(--fabric-border-secondary) 1px solid;
}

.tag {
  font-weight: bold;
  color: #ffa900;
}

.attr {
  font-weight: normal;
  color: var(--fabric-color-tertiary);
}

.attrValue {
  color: var(--fabric-color-secondary);
  font-weight: normal !important;
}

.keyword {
  font-weight: 600;
  color: #f50;
}

.domKeyword {
  font-weight: 600;
  color: #7209b7;
}

.strings {
  font-weight: bold;
  color: #6a994e !important;
}

.lineEnumeration {
  all: unset;
  user-select: none;
  position: relative;
  width: 100%;
}

.lineEnumeration::after {
  user-select: none;
  content: attr(data-index);
  position: absolute;
  top: 0;
  left: 0;
  color: var(--fabric-color-quaternary);
}

.lineEnumeration:hover::after,
.lineEnumeration:focus::after {
  color: var(--fabric-color-primary);
}

.lineEnumeration:focus {
  outline: var(--fabric-border-secondary) 2px solid;
}

.copyButton {
  position: absolute;
  z-index: 5;
  top: 8px;
  right: 8px;
  width: 2rem;
  height: 2rem;
  border-radius: 5px;
  background: var(--fabric-background-secondary);
  border: var(--fabric-border-secondary) 1px solid;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: 150ms linear;
  color: var(--fabric-color-secondary);
  cursor: pointer;
}

.copyButton:active {
  background: var(--fabric-background-quaternary);
  transform: scale(0.98);
}

.copyButton:hover {
  border-color: #0095ff;
  color: #0095ff;
}

.copyButton > * {
  font-size: 1.3rem !important;
}

.successButton {
  border-color: #38b000;
  color: #38b000;
  outline: #38b000 1px solid;
}

.successButton::after {
  content: "Copied";
  position: absolute;
  z-index: 999;
  left: -8px;
  top: 50%;
  transform: translate(-100%, -50%);
  background: rgb(0 0 0 / 75%);
  padding: 8px;
  border-radius: 5px;
  color: white;
}

.checkbox {
  width: 15px;
  height: 15px;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
  border-radius: 3px;
   font-size: 1rem ;
  background: var(--fabric-background-tertiary);
  border: var(--fabric-border-secondary) 1px solid;
}

